--- a/near-ios/Shop Detail/View/ShopDetailView.xib
+++ b/near-ios/Shop Detail/View/ShopDetailView.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -39,7 +37,7 @@
                         <constraint firstItem="ve7-wt-SPi" firstAttribute="leading" secondItem="flm-oR-TRa" secondAttribute="leading" id="rwo-z3-M6t"/>
                     </constraints>
                 </scrollView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oLy-6J-5oP">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oLy-6J-5oP">
                     <rect key="frame" x="16" y="430" width="382" height="24"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <nil key="textColor"/>
@@ -48,7 +46,7 @@
                 <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="2" translatesAutoresizingMaskIntoConstraints="NO" id="wtz-RN-ImV">
                     <rect key="frame" x="195.5" y="377" width="23" height="37"/>
                 </pageControl>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lab-Fp-yaa">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lab-Fp-yaa">
                     <rect key="frame" x="16" y="470" width="382" height="18"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <nil key="textColor"/>
@@ -64,7 +62,7 @@
                 <constraint firstItem="lab-Fp-yaa" firstAttribute="top" secondItem="oLy-6J-5oP" secondAttribute="bottom" constant="16" id="UTo-0S-Mag"/>
                 <constraint firstItem="wtz-RN-ImV" firstAttribute="bottom" secondItem="flm-oR-TRa" secondAttribute="bottom" id="Ves-bt-rDg"/>
                 <constraint firstItem="lab-Fp-yaa" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="WJa-yc-X52"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="lab-Fp-yaa" secondAttribute="bottom" constant="15" id="i9x-ox-fUM"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="lab-Fp-yaa" secondAttribute="bottom" constant="15" id="i9x-ox-fUM"/>
                 <constraint firstItem="oLy-6J-5oP" firstAttribute="top" secondItem="flm-oR-TRa" secondAttribute="bottom" constant="16" id="iUh-2K-4jx"/>
                 <constraint firstItem="oLy-6J-5oP" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="li8-8O-qa1"/>
                 <constraint firstItem="flm-oR-TRa" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="mDv-mH-qpI"/>
