--- a/near-ios/Shop Detail/ViewController/ShopDetailViewController.storyboard
+++ b/near-ios/Shop Detail/ViewController/ShopDetailViewController.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="CXt-J0-NTF">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="CXt-J0-NTF">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -31,7 +29,7 @@
                                     <constraint firstAttribute="bottom" secondItem="FEA-XX-QmJ" secondAttribute="bottom" id="NNh-FM-JHw"/>
                                     <constraint firstItem="FEA-XX-QmJ" firstAttribute="leading" secondItem="cRj-S4-d9c" secondAttribute="leading" id="NiQ-Tb-Q84"/>
                                     <constraint firstItem="FEA-XX-QmJ" firstAttribute="top" secondItem="cRj-S4-d9c" secondAttribute="top" id="fMP-7F-OCJ"/>
-                                    <constraint firstAttribute="trailing" secondItem="FEA-XX-QmJ" secondAttribute="trailing" constant="20" symbolic="YES" id="sMW-8q-BcU"/>
+                                    <constraint firstAttribute="trailing" secondItem="FEA-XX-QmJ" secondAttribute="trailing" id="sMW-8q-BcU"/>
                                 </constraints>
                             </scrollView>
                             <view contentMode="scaleToFill" placeholderIntrinsicWidth="414" placeholderIntrinsicHeight="84" translatesAutoresizingMaskIntoConstraints="NO" id="eE1-aN-Nac" customClass="ShopDetailBottomView" customModule="near_ios" customModuleProvider="target">
